feat: implement user management endpoints (find all, updaterol and delete)